Bug: Fixing alignment

--- a/style3.css
+++ b/style3.css
@@ -100,7 +100,8 @@ ul.breadcrumb li a:hover {
 
 html{
     padding: 25px 50px 75px;
-    font-family: font-family: Arial, Helvetica, sans-serif;
+    font-family: font-family Arial, Helvetica, sans-serif;
+    alignment:center;
 }
 
 .image {
